Revert "fix: MavenBinaryInstaller Setting loose POSIX file permissions is sec…"