@@ -4,19 +4,14 @@ import java.io.File;
 import java.io.FileInputStream;
 import java.io.FileOutputStream;
 import java.io.IOException;
-import java.net.URI;
-import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.attribute.PosixFilePermission;
-import java.util.HashSet;
-import java.util.Set;
+import java.nio.file.Paths;
+import java.nio.file.attribute.PosixFilePermissions;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipInputStream;
-import org.apache.commons.io.FilenameUtils;
 import org.apache.commons.io.IOUtils;
-import org.apache.commons.lang3.SystemUtils;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 
@@ -40,21 +35,19 @@ public class MavenBinaryInstaller {
    * @param directory where to install maven binaries.
    * @throws IOException in case of a problem.
    */
-  static void installMaven(String directory) throws IOException, URISyntaxException {
+  static void installMaven(String directory) throws IOException {
     log.info("receiving directory {}", directory);
-    String fileZip = FilenameUtils.normalize(directory + "/mvn.zip");
+    String fileZip = directory + "/mvn.zip";
 
 
-    Path fileZipPath = Path.of(fileZip);
-    if (Files.exists(fileZipPath)) {
-      Files.delete(fileZipPath);
+    if (Files.exists(Path.of(fileZip))) {
+      Files.delete(Path.of(fileZip));
     }
-    URL mavenUrl = new URI(MVN_URL).toURL();
-
-    log.info("copying {} to {}", mavenUrl, fileZipPath);
-    Files.copy(mavenUrl.openStream(), fileZipPath);
+    log.info("copying {} to {}", new URL(MVN_URL), Paths.get(fileZip));
+    Files.copy(new URL(MVN_URL).openStream(), Paths.get(fileZip));
 
     File destDir = new File(directory);
+    byte[] buffer = new byte[1024];
     log.info("attempting to open zip input stream in {}", fileZip);
     try (ZipInputStream zis = new ZipInputStream(new FileInputStream(fileZip))) {
       ZipEntry zipEntry = zis.getNextEntry();
@@ -77,6 +70,10 @@ public class MavenBinaryInstaller {
           // write file content
           try (FileOutputStream fos = new FileOutputStream(newFile)) {
             IOUtils.copy(zis, fos);
+            // int len;
+            // while ((len = zis.read(buffer)) > 0) {
+            // fos.write(buffer, 0, len);
+            // }
           }
         }
         zipEntry = zis.getNextEntry();
@@ -85,27 +82,14 @@ public class MavenBinaryInstaller {
     }
 
     // fix the execution flags for Mac and Linux
-    if (SystemUtils.IS_OS_MAC || SystemUtils.IS_OS_LINUX) {
-      log.info("Fixing execution flags for Mac and linux");
+    log.info("Fixing execution flags for Mac and linux");
+    Files.setPosixFilePermissions(Path.of(directory + "/" + BINDIR + "/bin/mvn.cmd"),
+        PosixFilePermissions.fromString("rwxrwxr-x"));
 
-      Set<PosixFilePermission> perms = new HashSet<>();
-      // user permission
-      perms.add(PosixFilePermission.OWNER_READ);
-      perms.add(PosixFilePermission.OWNER_WRITE);
-      perms.add(PosixFilePermission.OWNER_EXECUTE);
-      // group permissions
-      perms.add(PosixFilePermission.GROUP_READ);
-      perms.add(PosixFilePermission.GROUP_EXECUTE);
-      // others permissions removed
-      perms.add(PosixFilePermission.OTHERS_READ); // Non-Compliant
-      perms.remove(PosixFilePermission.OTHERS_WRITE); // Compliant
-      perms.add(PosixFilePermission.OTHERS_EXECUTE); // Compliant
+    Files.setPosixFilePermissions(Path.of(directory + "/" + BINDIR + "/bin/mvn"),
+        PosixFilePermissions.fromString("rwxrwxr-x"));
 
-      Files.setPosixFilePermissions(Path.of(directory, BINDIR, "bin", "mvn"), perms);
-    }
-
-
-    Files.delete(fileZipPath);
+    Files.delete(Path.of(fileZip));
   }
 
   /**
@@ -119,11 +103,7 @@ public class MavenBinaryInstaller {
   static String getMavenBinary(String directory) throws IOException {
     String d = directory + "/" + BINDIR + "/bin/mvn";
     if (!Files.exists(Path.of(d))) {
-      try {
-        installMaven(directory);
-      } catch (URISyntaxException e) {
-        throw new IOException(e);
-      }
+      installMaven(directory);
     }
     return d;
   }
